# reflect

./: .gitignore  Cargo.toml  README.md  reflect.toml.example
crates/reflect-core/: Cargo.toml
crates/reflect-core/src/: dedup.rs  error.rs  lib.rs  storage.rs  types.rs
crates/reflect-eval/: Cargo.toml
crates/reflect-eval/src/: lib.rs  runner.rs
crates/reflect-eval/src/parsers/: cargo_test.rs  mod.rs  pytest.rs
crates/reflect-mcp/: Cargo.toml
crates/reflect-mcp/src/: config.rs  main.rs  tools.rs
crates/reflect-store/: Cargo.toml
crates/reflect-store/src/: lib.rs
tests/fixtures/: cargo_test_output.txt  pytest_output.txt
