[package]
name = "reflect-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MCP server for reflect"
repository.workspace = true

[[bin]]
name = "reflect-mcp"
path = "src/main.rs"

[features]
default = []
# ctxgraph: enable when ctxgraph is published to crates.io
# ctxgraph = ["reflect-store/ctxgraph"]

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(feature, values("ctxgraph"))'] }

[dependencies]
reflect-core = { path = "../reflect-core", version = "0.1.0" }
reflect-eval = { path = "../reflect-eval", version = "0.1.0" }
reflect-store = { path = "../reflect-store", version = "0.1.0" }
rmcp = { workspace = true }
schemars = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
regex = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
