[package]
name = "reflect-store"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SQLite storage backend for reflect"

[features]
default = []
ctxgraph = ["dep:ctxgraph-core"]

[dependencies]
reflect-core = { path = "../reflect-core" }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
ctxgraph-core = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true }
